# intelligentAgent

./: .gitignore  QUICKSTART.md  README.md  __init__.py  config.py  env.example  example_queries_1.md  example_queries_2.md  example_queries_3.md  main.py  pyproject.toml  requirements.txt  setup.py
agents/: __init__.py  base.py  react.py  summarizer.py
llm/: __init__.py  client.py  models.py
prompts/: __init__.py  react.py  summarizer.py
schemas/: __init__.py  messages.py  responses.py
tools/: __init__.py  base.py  registry.py
tools/examples/: __init__.py  datetime_tool.py
tools/tools/: __init__.py  calculator.py  marketaux_tool.py  stock_tool.py
